--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "recipe-front",
+  "name": "vite---react---typescript",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "start": "npx http-server ./dist",
     "dev": "vite",
@@ -10,27 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
-    "@mui/styled-engine": "^5.16.6",
     "marked": "^14.0.0",
-    "market": "^1.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-select": "^5.8.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-select": "^5.8.0",
+    "styles": "link:@mui/material/styles"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9"
   }
 }
